force-app/main/default/objects/Matter__c/Matter__c.object-meta.xml
<CustomObject>
    <label>Matter</label>
    <nameField>
        <displayFormat>MAT-{YYYY}-{00000}</displayFormat>
        <label>Matter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>