force-app/main/default/objects/Matter__c/fields/Assigned_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters1</relationshipName>
    <type>Lookup</type>
</CustomField>