force-app/main/default/objects/Matter__c/fields/Assigned_Paralegal__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Paralegal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Paralegal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters2</relationshipName>
    <type>Lookup</type>
</CustomField>