force-app/main/default/objects/Matter__c/fields/Attorney_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fee_Amount__c</fullName>
    <formula>(Settlement_Amount__c * Attorney_Fee_Percent__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attorney Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>