force-app/main/default/objects/Matter__c/fields/Attorney_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fee_Percent__c</fullName>
    <label>Attorney Fee Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>