force-app/main/default/objects/Matter__c/fields/Attorney_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Next_Step__c</fullName>
    <label>Attorney Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting on somebody</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Review Documents</fullName>
            </value>
            <value>
                <fullName>Court Filing</fullName>
            </value>
            <value>
                <fullName>Client Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>