force-app/main/default/objects/Matter__c/fields/Case_Age_days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_days__c</fullName>
    <formula>(TODAY() -  Open_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>