force-app/main/default/objects/Matter__c/fields/Case_Progress__c.field-meta.xml
<CustomField>
    <fullName>Case_Progress__c</fullName>
    <label>Case Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>