force-app/main/default/objects/Matter__c/fields/Child_Support__c.field-meta.xml
<CustomField>
    <fullName>Child_Support__c</fullName>
    <label>Child Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>