force-app/main/default/objects/Matter__c/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Judgment — Won</fullName>
            </value>
            <value>
                <fullName>Judgment — Lost</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
            <value>
                <fullName>Client Terminated</fullName>
            </value>
            <value>
                <fullName>Statute Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>