force-app/main/default/objects/Matter__c/fields/Cost_Advanced__c.field-meta.xml
<CustomField>
    <fullName>Cost_Advanced__c</fullName>
    <label>Cost Advanced</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>