force-app/main/default/objects/Matter__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Court</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matters (Court)</relationshipLabel>
    <relationshipName>Matters1</relationshipName>
    <type>Lookup</type>
</CustomField>