force-app/main/default/objects/Matter__c/fields/Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_Name__c</fullName>
    <label>Court Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>