force-app/main/default/objects/Matter__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matters (Defendant)</relationshipLabel>
    <relationshipName>Matters2</relationshipName>
    <type>Lookup</type>
</CustomField>