force-app/main/default/objects/Matter__c/fields/Defense_Counsel_Firm__c.field-meta.xml
<CustomField>
    <fullName>Defense_Counsel_Firm__c</fullName>
    <label>Defense Counsel Firm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>