force-app/main/default/objects/Matter__c/fields/Discovery_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Cutoff__c</fullName>
    <label>Discovery Cutoff</label>
    <type>Date</type>
</CustomField>