force-app/main/default/objects/Matter__c/fields/Estimated_Case_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Case_Value__c</fullName>
    <label>Estimated Case Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>