force-app/main/default/objects/Matter__c/fields/Expert_Disclosure_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Expert_Disclosure_Deadline__c</fullName>
    <label>Expert Disclosure Deadline</label>
    <type>Date</type>
</CustomField>