force-app/main/default/objects/Matter__c/fields/Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>Incident_Location__c</fullName>
    <label>Incident Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>