force-app/main/default/objects/Matter__c/fields/Incident_State__c.field-meta.xml
<CustomField>
    <fullName>Incident_State__c</fullName>
    <label>Incident State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>