force-app/main/default/objects/Matter__c/fields/Judge_Name__c.field-meta.xml
<CustomField>
    <fullName>Judge_Name__c</fullName>
    <label>Judge Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>