force-app/main/default/objects/Matter__c/fields/Lawsuit_Filed__c.field-meta.xml
<CustomField>
    <fullName>Lawsuit_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lawsuit Filed</label>
    <type>Checkbox</type>
</CustomField>