force-app/main/default/objects/Matter__c/fields/Matter_Type__c.field-meta.xml
<CustomField>
    <fullName>Matter_Type__c</fullName>
    <label>Matter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motor Vehicle Accident</fullName>
            </value>
            <value>
                <fullName>Truck Accident</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Premises Liability</fullName>
            </value>
            <value>
                <fullName>Slip &amp; Fall</fullName>
            </value>
            <value>
                <fullName>Workplace Injury</fullName>
            </value>
            <value>
                <fullName>Dog Bite</fullName>
            </value>
            <value>
                <fullName>Product Liability</fullName>
            </value>
            <value>
                <fullName>Medical Malpractice</fullName>
            </value>
            <value>
                <fullName>Wrongful Death</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>