force-app/main/default/objects/Matter__c/fields/Mediation_Date__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Date__c</fullName>
    <label>Mediation Date</label>
    <type>Date</type>
</CustomField>