force-app/main/default/objects/Matter__c/fields/Name_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Case__c</fullName>
    <label>Name of Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>