force-app/main/default/objects/Matter__c/fields/Net_Client_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Net_Client_Recovery__c</fullName>
    <formula>Settlement_Amount__c - Attorney_Fee_Amount__c - Total_Negotiated_Liens__c - Cost_Advanced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Client Recovery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>