force-app/main/default/objects/Matter__c/fields/Plaintiff__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaintiff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matters (Plaintiff)</relationshipLabel>
    <relationshipName>Matters1</relationshipName>
    <type>Lookup</type>
</CustomField>