force-app/main/default/objects/Matter__c/fields/Principal_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Principal_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>