force-app/main/default/objects/Matter__c/fields/Prior_Injuries_Flag__c.field-meta.xml
<CustomField>
    <fullName>Prior_Injuries_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Injuries Flag</label>
    <type>Checkbox</type>
</CustomField>