force-app/main/default/objects/Matter__c/fields/Referring_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Referring_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters4</relationshipName>
    <type>Lookup</type>
</CustomField>