force-app/main/default/objects/Matter__c/fields/Smoking_History_Flag__c.field-meta.xml
<CustomField>
    <fullName>Smoking_History_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoking History Flag</label>
    <type>Checkbox</type>
</CustomField>