force-app/main/default/objects/Matter__c/fields/SOL_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>SOL_Days_Remaining__c</fullName>
    <formula>(Statute_Of_Limitations__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOL Days Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>