force-app/main/default/objects/Matter__c/fields/SOL_Notes__c.field-meta.xml
<CustomField>
    <fullName>SOL_Notes__c</fullName>
    <label>SOL Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>