force-app/main/default/objects/Matter__c/fields/SOL_Status__c.field-meta.xml
<CustomField>
    <fullName>SOL_Status__c</fullName>
    <formula>IF(
    SOL_Days_Remaining__c &lt; 0,
    &quot;EXPIRED&quot;,
    IF(
        SOL_Days_Remaining__c &lt; 30,
        &quot;CRITICAL&quot;,
        IF(
            SOL_Days_Remaining__c &lt; 90,
            &quot;WARNING&quot;,
            &quot;OK&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOL Status</label>
    <type>Text</type>
</CustomField>