force-app/main/default/objects/Matter__c/fields/SOL_Tolled__c.field-meta.xml
<CustomField>
    <fullName>SOL_Tolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOL Tolled</label>
    <type>Checkbox</type>
</CustomField>