force-app/main/default/objects/Matter__c/fields/Statute_Of_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Statute_Of_Limitations__c</fullName>
    <label>SOL Date</label>
    <type>Date</type>
</CustomField>