force-app/main/default/objects/Matter__c/fields/Tolling_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tolling_Reason__c</fullName>
    <label>Tolling Reason</label>
    <type>TextArea</type>
</CustomField>