force-app/main/default/objects/Matter__c/fields/Total_Damages__c.field-meta.xml
<CustomField>
    <fullName>Total_Damages__c</fullName>
    <label>Total Damages</label>
    <summarizedField>Damage__c.Amount__c</summarizedField>
    <summaryForeignKey>Damage__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>