force-app/main/default/objects/Matter__c/fields/Total_Liens__c.field-meta.xml
<CustomField>
    <fullName>Total_Liens__c</fullName>
    <label>Total Liens</label>
    <summarizedField>Lien__c.Original_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Lien__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Waived</value>
    </summaryFilterItems>
    <summaryForeignKey>Lien__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>