force-app/main/default/objects/Matter__c/fields/Total_Medical_Bills__c.field-meta.xml
<CustomField>
    <fullName>Total_Medical_Bills__c</fullName>
    <label>Total Medical Bills</label>
    <summarizedField>Medical_Treatment__c.Total_Billed__c</summarizedField>
    <summaryForeignKey>Medical_Treatment__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>