force-app/main/default/objects/Matter__c/fields/Total_Negotiated_Liens__c.field-meta.xml
<CustomField>
    <fullName>Total_Negotiated_Liens__c</fullName>
    <label>Total Negotiated Liens</label>
    <summarizedField>Lien__c.Negotiated_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Lien__c.Status__c</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </summaryFilterItems>
    <summaryForeignKey>Lien__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>